enum Status {
  ACTIVE
  INACTIVE
}

enum BoardingType {
  ON_BOARD
  OFF_BOARD
}

enum IdentificationType {
  CC
  TI
}

Table Person {
    id uuid [primary key]
    name varchar(50)
    lastName varchar(50)
    identificacionTypeId IdentificationType [not null, default: 'TI']
    identificationNumber varchar(50)
    email varchar(50)
    phone int
    residenceAddress varchar(50)
    dateBirth date
    status Status [not null, default: 'ACTIVE']
}

Table Role {
    id smallint [primary key]
    name varchar(20)
    description varchar(100)
    permissions varchar(40)
    status Status [not null, default: 'ACTIVE']
}

Table Action {
    id uuid [primary key]
    name varchar(30)
    description varchar(100)
    status Status [not null, default: 'ACTIVE']
}

Table View {
    id uuid [primary key]
    name varchar(30)
    description varchar(100)
    status Status [not null, default: 'ACTIVE']
}

Table Module {
    id uuid [primary key]
    name varchar(30)
    description varchar(100)
    status Status [not null, default: 'ACTIVE']
}

Table RoleModule {
    id uuid [primary key]
    roleId smallint
    moduleId uuid
    status Status [not null, default: 'ACTIVE']
}

Table ViewModule {
    id uuid [primary key] 
    viewId uuid
    moduleId uuid
    status Status [not null, default: 'ACTIVE']
}

Table ViewAction {
    id uuid [primary key]
    viewId uuid
    actionId uuid
    status Status [not null, default: 'ACTIVE']
}

// ----------------------------------
Table Family {
    id uuid [primary key]
    name varchar(50)
    observations varchar(100)
    status Status [not null, default: 'ACTIVE']
}

Table FamilyMember {
    id uuid [primary key]
    familyId uuid
    profileId uuid
    status Status [not null, default: 'ACTIVE']
}

Table School {
  id uuid [primary key]
  cityId uuid
  logo byte
  name varchar(30)
  address varchar(30)
  phone int
  email varchar(50)
  website varchar(100)
  theme varchar(20)
  status Status [not null, default: 'ACTIVE']
}

Table Boarding {
  id uuid [primary key]
  profileId uuid
  busId uuid
  stopId uuid
  dateTime timestamp
  status Status [not null, default: 'ACTIVE']
  boardingTypeId BoardingType [not null, default: "ON_BOARD"]
}


Table SavedAlert {
    id uuid [primary key]
    profileId uuid
    alertId uuid
    status Status [not null, default: 'ACTIVE']
  }

Table AlertType {
    id smallint [primary key]
    name varchar(30)
    description varchar(100)
    urgencyLevel smallint
    status Status [not null, default: 'ACTIVE']
  }

Table Alert {
    id uuid [primary key]
    alertTypeId smallint
    busId uuid
    dateTime datetime
    status Status [not null, default: 'ACTIVE']
  }


Table Bus {
  id uuid [primary key]
  driverId uuid
  schoolId uuid
  soatValidity date
  gpsStatus boolean
  lineModelId uuid
  status Status [not null, default: 'ACTIVE']
}

Table Brand {
  id smallint [primary key]
  name varchar(30)
  status Status [not null, default: 'ACTIVE']
}

Table Year {
  id smallint [primary key]
  year int
  status Status [not null, default: 'ACTIVE']
}
Table Line {
  id uuid [primary key]
  brandId uuid
  name varchar(30)
  status Status [not null, default: 'ACTIVE']
}
Table LineModel {
  id uuid [primary key]
  lineId uuid
  modelId smallint
  capacity smallint
  plate varchar(15)
  status Status [not null, default: 'ACTIVE']
}

Table Stop {
  id uuid [primary key]
  cityId uuid
  schoolId uuid
  address varchar(30)
  longitude decimal(12, 2)
  latitude decimal(12, 2)
  status Status [not null, default: 'ACTIVE']
}

Table Route {
  id uuid [primary key]
  schoolId uuid
  name varchar(30)
  targetSector varchar(30)
  startDateTime datetime
  endDateTime datetime
  status Status [not null, default: 'ACTIVE']
}


Table City {
  id uuid [primary key]
  name varchar(40)
  country varchar(30)
  status Status [not null, default: 'ACTIVE']
}

Table RouteStudentAssignments {
  id uuid [primary key]
  profileId uuid
  routeId uuid
  status Status [not null, default: 'ACTIVE']
}

Table RouteStop {
  id uuid [primary key]
  routeId uuid
  stopId uuid
  status Status [not null, default: 'ACTIVE']
}

Table RouteBusAssignments {
  id uuid [primary key]
  busId uuid
  routeId uuid
  status Status [not null, default: 'ACTIVE']
}

Table SchoolCampuse {
  id uuid [primary key]
  schoolId uuid
  name varchar(30)
  address varchar(30)
  status Status [not null, default: 'ACTIVE']
}

Table Course {
  id uuid [primary key]
  campusId uuid
  name varchar(10)
  status Status [not null, default: 'ACTIVE']
}

Table CourseGroup {
  id uuid [primary key]
  profileId uuid
  courseId uuid
  status Status [not null, default: 'ACTIVE']
}

Table DriverLicense {
  id uuid [primary key]
  profileId int [not null]
  licenseNumber smallint
  licenseExpirationDate date [not null]
  status Status [not null, default: 'ACTIVE']
}

Table ProfileRole {
  id uuid [primary key]
  profileId uuid
  roleId smallint
  status Status [not null, default: 'ACTIVE']
}

Table Profile {
    id uuid [primary key]
    personId uuid
    passwordHash varchar(100)
    status Status [not null, default: 'ACTIVE']
}

Table ExceptionalDriverUsage {
  id uuid [primary key]
  busId uuid
  profileId uuid
  dateTime datetime
  reason varchar(200)
  status Status [not null, default: 'ACTIVE']
}

Table ExceptionalRouteUsage {
  id uuid [primary key]
  profileId uuid
  routeId uuid
  startDateTime datetime
  endDateTime datetime
  reason varchar(200)
  status Status [not null, default: 'ACTIVE']
}

Table GpsDevice {
  id uuid [primary key]
  busId uuid
  imei varchar(20)
  status varchar(20)
  lastConnection datetime
}

Table GpsLocation {
  id uuid [primary key]
  gpsDeviceId uuid
  latitude decimal(10, 7)
  longitude decimal(10, 7)
  speed decimal(8, 2)
  course decimal(8, 2)
  dateTime datetime
}




// Relationships

Ref person_profile: Profile.personId - Person.id
Ref profile_rol: ProfileRole.profileId > Profile.id
Ref profile_rol: ProfileRole.roleId > Role.id

Ref saved_alert: SavedAlert.profileId > Profile.id
Ref saved_alert: SavedAlert.alertId > Alert.id

Ref alert: Alert.alertTypeId > AlertType.id
Ref alert: Alert.busId > Bus.id

Ref school_campuse: SchoolCampuse.schoolId > School.id

Ref family_member: FamilyMember.familyId > Family.id
Ref family_member: FamilyMember.profileId > Profile.id

Ref boarding: Boarding.profileId > Profile.id
Ref boarding: Boarding.busId > Bus.id
Ref boarding: Boarding.stopId > Stop.id

Ref cities: Stop.cityId > City.id
Ref cities: School.cityId > City.id

Ref route_student_assignments: RouteStudentAssignments.routeId > Route.id
Ref route_student_assignments: RouteStudentAssignments.profileId > Profile.id

Ref route_stop: RouteStop.routeId > Route.id
Ref route_stop: RouteStop.stopId > Stop.id

Ref route_bus_assignments: RouteBusAssignments.busId > Bus.id
Ref route_bus_assignments: RouteBusAssignments.routeId > Route.id

Ref bus: Bus.schoolId > School.id
Ref bus: Bus.driverId > Profile.id

Ref stop_school: Stop.schoolId > School.id

Ref route_school: Route.schoolId > School.id

Ref course_group: CourseGroup.profileId > Profile.id
Ref course_group: CourseGroup.courseId > Course.id

Ref driver_license: DriverLicense.profileId - Profile.id

Ref exception_driver_usage: ExceptionalDriverUsage.busId > Bus.id
Ref exception_driver_usage: ExceptionalDriverUsage.profileId > Profile.id

Ref exceptional_route_usage: ExceptionalRouteUsage.profileId > Profile.id
Ref exceptional_route_usage: ExceptionalRouteUsage.routeId > Route.id

// Modulo de seguridad
Ref role_module: RoleModule.roleId > Role.id
Ref role_module: RoleModule.moduleId > Module.id

Ref view_module: ViewModule.viewId > View.id
Ref view_module: ViewModule.moduleId > Module.id

Ref view_action: ViewAction.viewId > View.id
Ref view_action: ViewAction.actionId > Action.id

Ref n: Course.campusId > SchoolCampuse.id
Ref brand_line: Brand.id < Line.brandId
ref bus_model: LineModel.id < Bus.lineModelId
ref lineModel_line: Line.id < LineModel.lineId
Ref gps_device_bus: GpsDevice.busId - Bus.id

Ref gps_location_device: GpsLocation.gpsDeviceId > GpsDevice.id
ref lineModel_line: Year.id < LineModel.modelId
